# polygnn_trainer

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
polygnn_trainer/: __init__.py  constants.py  hyperparameters.py  infer.py  layers.py  load.py  load2.py  loss.py  models.py  os.py  prepare.py  save.py  save2.py  scale.py  std_module.py  train.py  utils.py
polygnn_trainer/parse/: parse.py  parse_cmd.py
sample_data/: sample.csv
tests/: test_misordered_feats.py  test_polygnn_trainer.py  test_scale.py  utils_test.py
