[tool.poetry]
name = "polygnn_trainer"
version = "0.3.0"
description = ""
authors = ["Rishi Gurnani <rgurnani96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
# wheel = "^0.37.1"
pandas = ">=1.1,<1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scikit-optimize = "^0.9.0"
rdkit-pypi = "^2021.9.3"
poethepoet = "^0.10.0"
black = "^22.3.0"

[tool.poe.tasks]
torch-osx = "pip install torch==1.9.1 torchvision==0.10.1 torchaudio==0.9.1"
pyg-osx = "pip install https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_scatter-2.0.9-cp37-cp37m-macosx_10_14_x86_64.whl https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_sparse-0.6.12-cp37-cp37m-macosx_10_14_x86_64.whl torch-geometric"
torch-linux_win-cuda102 = "pip install torch==1.9.1+cu102 torchvision==0.10.1+cu102 torchaudio==0.9.1 -f https://download.pytorch.org/whl/torch_stable.html"
pyg-linux_win-cuda102 = "pip install https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_scatter-2.0.9-cp37-cp37m-linux_x86_64.whl https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_sparse-0.6.12-cp37-cp37m-linux_x86_64.whl torch_geometric"

ipykernel = "^6.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
