[tool.poetry]
name = "polygnn_trainer"
version = "0.4.2"
description = ""
authors = ["Rishi Gurnani <rgurnani96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
# wheel = "^0.37.1"
pandas = ">=1.1,<1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scikit-optimize = {git = "https://github.com/rishigurnani/scikit-optimize.git", rev = "master"}
rdkit-pypi = "^2021.9.3"
poethepoet = "^0.10.0"
black = "^22.3.0"

[tool.poe.tasks]
torch-osx = "pip install torch==1.9.1 torchvision==0.10.1 torchaudio==0.9.1"
pyg-osx = "pip install https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_scatter-2.0.9-cp37-cp37m-macosx_10_14_x86_64.whl https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_sparse-0.6.12-cp37-cp37m-macosx_10_14_x86_64.whl torch-geometric"
torch-linux_win-cuda102 = "pip install torch==1.12.1+cu102 torchvision==0.13.1+cu102 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu102"
pyg-linux_win-cuda102 = "pip install https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_scatter-2.1.0%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_sparse-0.6.16%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl torch_geometric"

ipykernel = "^6.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
